# AWS-JPL-OSR-Challenge

./: .gitignore  README.md  roboMakerSettings.json  roboMakerSettings.json_burnsca_example
.c9/: out_of_memory  project.settings
.c9/metadata/: tab109
.c9/metadata/environment/: README.md  roboMakerSettings.json
.c9/metadata/environment/simulation_ws/: setup.sh
.c9/metadata/environment/simulation_ws/devel/: setup.sh
.c9/metadata/environment/simulation_ws/src/: CMakeLists.txt
.c9/metadata/environment/simulation_ws/src/mars/: CMakeLists.txt  package.xml
.c9/metadata/environment/simulation_ws/src/mars/launch/: _env_only.launch  mars.launch  mars_env_only.launch  mars_full_sim.launch  rover.launch  rover_mars.launch
.c9/metadata/environment/simulation_ws/src/mars/worlds/: mars.world
.c9/metadata/environment/simulation_ws/src/rl-agent/: setup.py
.c9/metadata/environment/simulation_ws/src/rl-agent/markov/: model_evaluation.py  rover_agent.py  s3_boto_data_store.py
.c9/metadata/environment/simulation_ws/src/rl-agent/markov.egg-info/: requires.txt
.c9/metadata/environment/simulation_ws/src/rl-agent/markov/environments/: __init__.py  mars_env.py
.c9/metadata/environment/simulation_ws/src/rl-agent/markov/presets/: mars_presets.py  training_grounds.py
.c9/metadata/environment/simulation_ws/src/rover/message_to_tf/: CMakeLists.txt  package.xml
.c9/metadata/environment/simulation_ws/src/rover/rover_description/: CMakeLists.txt  package.xml
.c9/metadata/environment/simulation_ws/src/rover/rover_description/rviz/: osr_rover.rviz  rover.rviz  urdf.rviz
.c9/metadata/environment/simulation_ws/src/rover/rover_description/urdf/: rover_description.urdf
.c9/metadata/environment/simulation_ws/src/training-grounds/: CMakeLists.txt
.c9/metadata/environment/simulation_ws/src/training-grounds/launch/: eval.launch  rover.launch  training.launch  training_env.launch  training_env_only.launch  training_full_sim.launch  training_gear.launch
.c9/metadata/environment/simulation_ws/src/training-grounds/scripts/: run_local_rl_agent.sh  run_model_evaluation.sh
simulation_ws/: setup.sh
simulation_ws/src/mars/: CMakeLists.txt  package.xml
simulation_ws/src/mars/launch/: mars_env_only.launch  mars_full_sim.launch  rover_mars.launch
simulation_ws/src/mars/models/crater/: model.config  model.sdf
simulation_ws/src/mars/models/crater/meshes/: crater4k.stl  crater_martian_red.dae
simulation_ws/src/mars/models/curiosity_path/: model.config  model.sdf
simulation_ws/src/mars/models/curiosity_path/meshes/: curiosity_path25k.stl
simulation_ws/src/mars/models/jaggedrock/: model.config  model.sdf
simulation_ws/src/mars/models/jaggedrock/meshes/: jaggedrock_texture.dae
simulation_ws/src/mars/models/rock9/: model.config  model.sdf
simulation_ws/src/mars/models/rock9/meshes/: rock9.dae  rock9.stl
simulation_ws/src/mars/models/rockformation/: model.config  model.sdf
simulation_ws/src/mars/models/rockformation/meshes/: rockformation.dae
simulation_ws/src/mars/models/terrain/: model.config  model.sdf
simulation_ws/src/mars/models/terrain/meshes/: terrain.dae  terrain.stl  terrain_textured.dae
simulation_ws/src/mars/scripts/: run_model_evaluation.sh
simulation_ws/src/mars/worlds/: mars.world
simulation_ws/src/rl-agent/: README.md  setup.py
simulation_ws/src/rl-agent/markov/: model_evaluation.py  rover_agent.py  s3_boto_data_store.py  utils.py
simulation_ws/src/rl-agent/markov/environments/: __init__.py  mars_env.py  training_env.py
simulation_ws/src/rl-agent/markov/presets/: mars_presets.py  training_grounds.py
simulation_ws/src/rover/message_to_tf/: CHANGELOG.rst  CMakeLists.txt  package.xml
simulation_ws/src/rover/message_to_tf/src/: message_to_tf.cpp
simulation_ws/src/rover/rover_description/: CMakeLists.txt  package.xml
simulation_ws/src/rover/rover_description/config/: rover_control.yaml
simulation_ws/src/rover/rover_description/launch/: rover.launch
simulation_ws/src/rover/rover_description/meshes/: body.STL  body.dae  body_bright.dae  body_col.STL  bogie_left.STL  bogie_left.dae  bogie_left_col.STL  bogie_right.STL  bogie_right.dae  bogie_right_col.STL  corner_lb.STL  corner_lb.dae  corner_lb_col.STL  corner_lf.STL  corner_lf.dae  corner_lf_col.STL  corner_rb.STL  corner_rb.dae  corner_rb_col.STL  corner_rf.STL  corner_rf.dae  corner_rf_col.STL  rocker_left.STL  rocker_left.dae  rocker_left_col.STL  rocker_right.STL  rocker_right.dae  rocker_right_col.STL  wheel_lb.STL  wheel_lb.dae  wheel_lb_col.STL  wheel_lf.STL  wheel_lf.dae  wheel_lf_col.STL  wheel_lm.STL  wheel_lm.dae  wheel_lm_col.STL  wheel_rb.STL  wheel_rb.dae  wheel_rb_col.STL  (+6 more)
simulation_ws/src/rover/rover_description/nodes/: motion
simulation_ws/src/rover/rover_description/rviz/: osr_rover.rviz  rover.rviz  urdf.rviz
simulation_ws/src/rover/rover_description/urdf/: rover_description.urdf
simulation_ws/src/rover/rover_description/world/: groundplane.world
simulation_ws/src/training-grounds/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/training-grounds/config/: rover_control.yaml
simulation_ws/src/training-grounds/launch/: eval.launch  rover_training_env.launch  training_env_only.launch  training_full_sim.launch  training_gear.launch
simulation_ws/src/training-grounds/models/monolith/: model.config  monolith.sdf
simulation_ws/src/training-grounds/scripts/: run_local_rl_agent.sh  run_model_evaluation.sh
simulation_ws/src/training-grounds/worlds/: basic.world
