<?xml version="1.0"?>
<package format="2">
  <name>training_grounds</name>
  <version>0.0.1</version>
  <description>The training_grounds package</description>

 
  <maintainer email="burnsca@amazon.com">chris</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>rover_description</depend>
  <exec_depend>gazebo</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
